--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "css-loader": "^0.26.1",
-    "foundation-sites": "6.2.0",
-    "jquery": "2.2.1",
+    "foundation-sites": "^6.5.0",
+    "jquery": "^3.3.1",
     "node-sass": "^4.3.0",
     "sass-loader": "^4.1.1",
     "script-loader": "^0.7.0",
